# adbauto

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
adbauto/: __init__.py  adb.py  input.py  screen.py
adbauto/scrcpy/: control.py  core.py
examples/: connect_adb.py  find_all_images.py  scroll.py  take_screenshot.py  tap_on_screen.py  wait_until_visible.py
